add design services and anchors in contact page

--- a/index.html
+++ b/index.html
@@ -31,9 +31,6 @@
               <a href="#page-previous-about">¿Quienes somos?</a>
             </li>
             <li class="menu-list__item">
-              <a href="#page-prices">Precios</a>
-            </li>
-            <li class="menu-list__item">
               <a href="#page-contact">Contacto</a>
             </li>
           </ul>
@@ -157,8 +154,7 @@
                 <p>🚧</p>
                 <p>
                   Adecuación de espacios de trabajo mediante la demarcación de
-                  zonas, para el cumplimiento de normativas legales de
-                  seguridad.
+                  zonas, para el cumplimiento de normativas legales de seguridad
                 </p>
               </div>
               <ul class="service-description">
@@ -186,8 +182,8 @@
               <div class="service-description__text">
                 <p>🚧</p>
                 <p>
-                  Reparar o fabricar estructuras metálicas mediante trabajos de
-                  soldadura.
+                  Reparación o fabricación estructuras metálicas mediante
+                  trabajos de soldadura
                 </p>
               </div>
               <ul class="service-description">
@@ -233,7 +229,7 @@
                 <p>🚧</p>
                 <p>
                   Limpieza de canales de aguas lluvia y reparación minuciosa de
-                  tejados.
+                  tejados
                 </p>
               </div>
               <ul class="service-description">
@@ -257,9 +253,9 @@
               <div class="service-description__text">
                 <p>💻</p>
                 <p>
-                  Creación de estructuras personalizadas y estandarizables, para
+                  Diseño de estructuras personalizadas y estandarizables, para
                   el cumplimiento de objetivos logísticos y productivos de los
-                  proyectos.
+                  proyectos
                 </p>
               </div>
               <ul class="service-description">
@@ -297,7 +293,7 @@
               <div class="service-description__text">
                 <p>💻</p>
                 <p>
-                  Creación de piezas mecánicas existentes, defectuosas o nuevas
+                  Diseño de piezas mecánicas existentes, defectuosas o nuevas
                 </p>
               </div>
               <ul class="service-description">
@@ -334,7 +330,7 @@
             <li>
               <div class="service-description__text">
                 <p>💻</p>
-                <p>Creación de planos para proyectos de ingeniería</p>
+                <p>Diseño de planos para proyectos de ingeniería</p>
               </div>
               <ul class="service-description">
                 <li>
@@ -350,30 +346,42 @@
                 </li>
               </ul>
             </li>
+            <li>
+              <div class="service-description__text">
+                <p>💻</p>
+                <p>Diseño de diagramas de instrumentos y tuberías (P&ID)</p>
+              </div>
+              <ul class="service-description">
+                <li>
+                  <div class="service-description__text service-subdescription">
+                    <p>✔️</p>
+                    <p>
+                      <strong>Beneficio: </strong>Detección oportuna de fallas
+                      en procesos
+                    </p>
+                  </div>
+                </li>
+                <li>
+                  <div class="service-description__text service-subdescription">
+                    <p>✔️</p>
+                    <p>
+                      <strong>Beneficio: </strong>Inventario de equipos y
+                      máquinas para el adecuado stock en almacén
+                    </p>
+                  </div>
+                </li>
+                <li>
+                  <div class="service-description__text service-subdescription">
+                    <p>✔️</p>
+                    <p>
+                      <strong>Beneficio: </strong>Programación eficiente de
+                      mantenimientos preventivos, predictivos y correctivos
+                    </p>
+                  </div>
+                </li>
+              </ul>
+            </li>
           </ul>
-          <p class="subclaim">
-            <strong>Nos caracterizamos por: </strong> Lorem ipsum dolor sit amet
-            consectetur, adipisicing elit. Debitis facilis vel officia tempore,
-            earum a hic laboriosam, aliquid provident tempora, nihil ipsum rerum
-            animi mollitia? Iure magni reiciendis beatae fugiat.
-          </p>
-        </section>
-        <section id="page-prices">
-          <h1 class="claim">Precios</h1>
-          <p class="subclaim">
-            <strong>Categoría diseño: </strong> Lorem ipsum dolor sit, amet
-            consectetur adipisicing elit. Doloribus ea velit aspernatur fugit
-            beatae a eum expedita fugiat distinctio, voluptas debitis non,
-            architecto quos delectus mollitia. Dolorem quia distinctio
-            voluptatum!
-          </p>
-          <p class="subclaim">
-            <strong>Categoría servicios: </strong> Lorem ipsum dolor sit, amet
-            consectetur adipisicing elit. Doloribus ea velit aspernatur fugit
-            beatae a eum expedita fugiat distinctio, voluptas debitis non,
-            architecto quos delectus mollitia. Dolorem quia distinctio
-            voluptatum!
-          </p>
         </section>
       </article>
 
@@ -386,13 +394,15 @@
           <section class="footer-widget">
             <h3>Teléfonos</h3>
             <div class="footer-widget__phones">
-              <p>+57 3128644362</p>
-              <p>+57 3225821796</p>
+              <a href="tel:+573128644362">+573128644362</a>
+              <a href="tel:+573225821796">+573225821796</a>
             </div>
           </section>
           <section class="footer-widget">
             <h3>Email</h3>
-            <p>servicios@diservi.com</p>
+            <a href="mailto:dis.servi.indu@gmail.com"
+              >dis.servi.indu@gmail.com</a
+            >
           </section>
         </footer>
       </div>
