update format of images from jpg or png to webp

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <main>
       <header>
         <a href="#" class="logo"
-          ><img src="multimedia/logo.png" alt="logo diservi"
+          ><img src="multimedia/logo.webp" alt="logo diservi"
         /></a>
         <nav class="menu">
           <ul class="menu-list">
@@ -40,7 +40,11 @@
       <article>
         <section id="page-welcome">
           <div class="welcome-header">
-            <img src="./multimedia/logo.png" alt="logo Diservi" width="250px" />
+            <img
+              src="./multimedia/logo.webp"
+              alt="logo Diservi"
+              width="250px"
+            />
             <h1 class="claim">Diseños y Servicios industriales</h1>
             <h1 class="claim">Tu empresa nos necesita</h1>
           </div>
