update code to improve performance and SEO

--- a/index.html
+++ b/index.html
@@ -4,7 +4,19 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="servicios industriales de pintura, servicios de soldadura estructural y reparaciones metalmecánicas, limpieza de canales de aguas, reparación de tejados, Impermeabilización de suelos para zonas húmedas y cuartos fríos. Diseños industriales, diseño de estructuras, diseño de piezas mecánicas, diseño de planos para proyectos, diseños P&ID"
+    />
+    <title>diservi S.A.S, Diseños y Servicios industriales</title>
+    <link rel="icon" href="multimedia/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="src/css/main.css" />
+    <link
+      rel="preconnect"
+      as="font"
+      href="https://ka-f.fontawesome.com/releases/v6.4.0/webfonts/free-fa-solid-900.woff2"
+      crossorigin
+    />
     <link
       rel="preload"
       href="multimedia/painting/1.webp"
@@ -22,13 +34,8 @@
     <script
       src="https://kit.fontawesome.com/280f1af231.js"
       crossorigin="anonymous"
+      async
     ></script>
-    <script type="module" src="src/js/main.js" defer></script>
-    <script type="module" src="src/js/helpers.js" defer></script>
-    <script type="module" src="src/js/constants.js" defer></script>
-    <script type="module" src="src/js/paintingValues.js" defer></script>
-    <script type="module" src="src/js/solderingValues.js" defer></script>
-    <title>diservi S.A.S</title>
   </head>
   <body>
     <main>
@@ -424,5 +431,16 @@
         </footer>
       </div>
     </main>
+    <script type="module" src="src/js/constants.js" defer></script>
+    <script type="module" src="src/js/helpers.js" defer></script>
+    <script type="module" src="src/js/paintingValues.js" defer></script>
+    <script type="module" src="src/js/main.js" defer></script>
+    <script type="module" src="src/js/solderingValues.js" defer></script>
+    <script type="module" src="src/js/cleaningValues.js" defer></script>
+    <script type="module" src="src/js/waterproofingValues.js" defer></script>
+    <script type="module" src="src/js/design_aValues.js" defer></script>
+    <script type="module" src="src/js/design_bValues.js" defer></script>
+    <script type="module" src="src/js/design_cValues.js" defer></script>
+    <script type="module" src="src/js/design_dValues.js" defer></script>
   </body>
 </html>
