reorder fontawesome preconnect and change async to defer to improve charging in mobile network

--- a/index.html
+++ b/index.html
@@ -12,12 +12,6 @@
     <link rel="icon" href="multimedia/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="src/css/main.css" />
     <link
-      rel="preconnect"
-      as="font"
-      href="https://ka-f.fontawesome.com/releases/v6.4.0/webfonts/free-fa-solid-900.woff2"
-      crossorigin
-    />
-    <link
       rel="preload"
       href="multimedia/painting/1.webp"
       as="image"
@@ -31,10 +25,16 @@
       type="image/webp"
       media="(min-width: 320px)"
     />
+    <link
+      rel="preconnect"
+      as="font"
+      href="https://ka-f.fontawesome.com/releases/v6.4.0/webfonts/free-fa-solid-900.woff2"
+      crossorigin
+    />
     <script
       src="https://kit.fontawesome.com/280f1af231.js"
       crossorigin="anonymous"
-      async
+      defer
     ></script>
   </head>
   <body>
