--- a/index.html
+++ b/index.html
@@ -428,12 +428,12 @@
     <script type="module" src="src/js/helpers.js" defer></script>
     <script type="module" src="src/js/paintingValues.js" defer></script>
     <script type="module" src="src/js/main.js" defer></script>
-    <script type="module" src="src/js/solderingValues.js" defer></script>
-    <script type="module" src="src/js/cleaningValues.js" defer></script>
-    <script type="module" src="src/js/waterproofingValues.js" defer></script>
-    <script type="module" src="src/js/design_aValues.js" defer></script>
-    <script type="module" src="src/js/design_bValues.js" defer></script>
-    <script type="module" src="src/js/design_cValues.js" defer></script>
-    <script type="module" src="src/js/design_dValues.js" defer></script>
+    <script type="module" src="src/js/solderingValues.js" async></script>
+    <script type="module" src="src/js/cleaningValues.js" async></script>
+    <script type="module" src="src/js/waterproofingValues.js" async></script>
+    <script type="module" src="src/js/design_aValues.js" async></script>
+    <script type="module" src="src/js/design_bValues.js" async></script>
+    <script type="module" src="src/js/design_cValues.js" async></script>
+    <script type="module" src="src/js/design_dValues.js" async></script>
   </body>
 </html>
