update task and solve lowercase in Somos word

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         <section id="page-about">
           <h1 class="title">¿Quienes somos?</h1>
           <p class="subclaim">
-            somos un equipo de profesionales con amplio conocimiento en
+            Somos un equipo de profesionales con amplio conocimiento en
             industrias de diversos sectores, lo cual nos permite apoyar tu
             empresa en:
           </p>
