fix orthography with comas and colons

--- a/index.html
+++ b/index.html
@@ -170,7 +170,8 @@
                 <p>🚧</p>
                 <p>
                   Adecuación de espacios de trabajo mediante la demarcación de
-                  zonas, para el cumplimiento de normativas legales de seguridad
+                  zonas, para el cumplimiento de normativas legales de
+                  seguridad.
                 </p>
               </div>
               <ul class="service-description">
@@ -179,7 +180,7 @@
                     <p>✔️</p>
                     <p>
                       <strong>Beneficio: </strong>Disminuir los accidentes
-                      laborales
+                      laborales,
                     </p>
                   </div>
                 </li>
@@ -188,7 +189,7 @@
                     <p>✔️</p>
                     <p>
                       <strong>Beneficio: </strong>Promover la eficiencia en el
-                      uso de los espacios
+                      uso de los espacios.
                     </p>
                   </div>
                 </li>
@@ -199,7 +200,7 @@
                 <p>🚧</p>
                 <p>
                   Reparación o fabricación estructuras metálicas mediante
-                  trabajos de soldadura
+                  trabajos de soldadura.
                 </p>
               </div>
               <ul class="service-description">
@@ -208,7 +209,7 @@
                     <p>✔️</p>
                     <p>
                       <strong>Beneficio: </strong> Disminuir el deterioro de
-                      áreas de trabajo
+                      áreas de trabajo,
                     </p>
                   </div>
                 </li>
@@ -217,7 +218,7 @@
                     <p>✔️</p>
                     <p>
                       <strong>Beneficio: </strong> Aumentar la seguridad
-                      mediante estructuras metálicas robustas y confiables
+                      mediante estructuras metálicas robustas y confiables.
                     </p>
                   </div>
                 </li>
@@ -226,7 +227,7 @@
             <li>
               <div class="service-description__text">
                 <p>🚧</p>
-                <p>Impermeabilización de suelos</p>
+                <p>Impermeabilización de suelos.</p>
               </div>
               <ul class="service-description">
                 <li>
@@ -234,7 +235,7 @@
                     <p>✔️</p>
                     <p>
                       <strong>Beneficio: </strong> Prolongar la vida útil de las
-                      zonas frías o húmedas
+                      zonas frías o húmedas.
                     </p>
                   </div>
                 </li>
@@ -245,7 +246,7 @@
                 <p>🚧</p>
                 <p>
                   Limpieza de canales de aguas lluvia y reparación minuciosa de
-                  tejados
+                  tejados.
                 </p>
               </div>
               <ul class="service-description">
@@ -255,7 +256,7 @@
                     <p>
                       <strong>Beneficio: </strong>Reducir pérdidas de producto
                       terminado o materias primas al resolver a tiempo la
-                      aparición de goteras
+                      aparición de goteras.
                     </p>
                   </div>
                 </li>
@@ -271,7 +272,7 @@
                 <p>
                   Diseño de estructuras personalizadas y estandarizables, para
                   el cumplimiento de objetivos logísticos y productivos de los
-                  proyectos
+                  proyectos.
                 </p>
               </div>
               <ul class="service-description">
@@ -280,7 +281,7 @@
                     <p>✔️</p>
                     <p>
                       <strong>Beneficio: </strong>Optimizar el uso de los
-                      espacios de trabajo
+                      espacios de trabajo,
                     </p>
                   </div>
                 </li>
@@ -290,7 +291,7 @@
                     <p>
                       <strong>Beneficio: </strong>Cumplir normativas nacionales
                       e internacionales de calidad, medio ambiente, seguridad y
-                      salud laboral
+                      salud laboral,
                     </p>
                   </div>
                 </li>
@@ -299,7 +300,7 @@
                     <p>✔️</p>
                     <p>
                       <strong>Beneficio: </strong>Disminuir costos mediante la
-                      creación de accesorios o elementos de ingeniería avanzada
+                      creación de accesorios o elementos de ingeniería avanzada.
                     </p>
                   </div>
                 </li>
@@ -309,7 +310,7 @@
               <div class="service-description__text">
                 <p>💻</p>
                 <p>
-                  Diseño de piezas mecánicas existentes, defectuosas o nuevas
+                  Diseño de piezas mecánicas existentes, defectuosas o nuevas.
                 </p>
               </div>
               <ul class="service-description">
@@ -319,7 +320,7 @@
                     <p>
                       <strong>Beneficio: </strong>Reducir costos de importación
                       de piezas y repuestos, mediante planos que permiten la
-                      fabricación local
+                      fabricación local,
                     </p>
                   </div>
                 </li>
@@ -328,7 +329,7 @@
                     <p>✔️</p>
                     <p>
                       <strong>Beneficio: </strong>Garantizar el stock de
-                      inventario en repuestos críticos
+                      inventario en repuestos críticos,
                     </p>
                   </div>
                 </li>
@@ -337,7 +338,7 @@
                     <p>✔️</p>
                     <p>
                       <strong>Beneficio: </strong>Prolongar la vida útil de
-                      máquinas y equipos
+                      máquinas y equipos.
                     </p>
                   </div>
                 </li>
@@ -346,7 +347,7 @@
             <li>
               <div class="service-description__text">
                 <p>💻</p>
-                <p>Diseño de planos para proyectos de ingeniería</p>
+                <p>Diseño de planos para proyectos de ingeniería.</p>
               </div>
               <ul class="service-description">
                 <li>
@@ -356,7 +357,7 @@
                       <strong>Beneficio: </strong>Acompañamiento constante a
                       ingenieros de proyectos para la identificación amplia y
                       detallada de los factores que intervienen en la planeación
-                      de un proyecto
+                      de un proyecto.
                     </p>
                   </div>
                 </li>
@@ -365,7 +366,7 @@
             <li>
               <div class="service-description__text">
                 <p>💻</p>
-                <p>Diseño de diagramas de instrumentos y tuberías (P&ID)</p>
+                <p>Diseño de diagramas de instrumentos y tuberías (P&ID).</p>
               </div>
               <ul class="service-description">
                 <li>
@@ -373,7 +374,7 @@
                     <p>✔️</p>
                     <p>
                       <strong>Beneficio: </strong>Detección oportuna de fallas
-                      en procesos
+                      en procesos,
                     </p>
                   </div>
                 </li>
@@ -382,7 +383,7 @@
                     <p>✔️</p>
                     <p>
                       <strong>Beneficio: </strong>Inventario de equipos y
-                      máquinas para el adecuado stock en almacén
+                      máquinas para el adecuado stock en almacén,
                     </p>
                   </div>
                 </li>
@@ -391,7 +392,7 @@
                     <p>✔️</p>
                     <p>
                       <strong>Beneficio: </strong>Programación eficiente de
-                      mantenimientos preventivos, predictivos y correctivos
+                      mantenimientos preventivos, predictivos y correctivos.
                     </p>
                   </div>
                 </li>
