add item according to client request

--- a/index.html
+++ b/index.html
@@ -361,6 +361,16 @@
                     </p>
                   </div>
                 </li>
+                <li>
+                  <div class="service-description__text service-subdescription">
+                    <p>✔️</p>
+                    <p>
+                      <strong>Beneficio: </strong>Seguimiento a la ejecución del
+                      proyecto garantizando que se cumpla según el diseño
+                      planeado.
+                    </p>
+                  </div>
+                </li>
               </ul>
             </li>
             <li>
